--- a/py310.ipynb
+++ b/py310.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "id": "1c82416c-613e-48c0-8adf-c64094ad4d4a",
    "metadata": {},
    "outputs": [
@@ -111,30 +111,30 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>100</td>\n",
-       "      <td>0.000323</td>\n",
+       "      <td>0.000287</td>\n",
        "      <td>&lt;-</td>\n",
-       "      <td>0.000416</td>\n",
+       "      <td>0.000314</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1000</td>\n",
-       "      <td>0.004231</td>\n",
+       "      <td>0.003229</td>\n",
        "      <td>-&gt;</td>\n",
-       "      <td>0.003077</td>\n",
+       "      <td>0.002997</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1000000</td>\n",
-       "      <td>0.600796</td>\n",
-       "      <td>-&gt;</td>\n",
-       "      <td>0.593958</td>\n",
+       "      <td>0.635925</td>\n",
+       "      <td>&lt;-</td>\n",
+       "      <td>0.636027</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>10000000</td>\n",
-       "      <td>5.867893</td>\n",
+       "      <td>6.267407</td>\n",
        "      <td>&lt;-</td>\n",
-       "      <td>5.951822</td>\n",
+       "      <td>6.338647</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -142,13 +142,13 @@
       ],
       "text/plain": [
        "       loop  elif_time seconds faster  match_time seconds\n",
-       "0       100           0.000323     <-            0.000416\n",
-       "1      1000           0.004231     ->            0.003077\n",
-       "2   1000000           0.600796     ->            0.593958\n",
-       "3  10000000           5.867893     <-            5.951822"
+       "0       100           0.000287     <-            0.000314\n",
+       "1      1000           0.003229     ->            0.002997\n",
+       "2   1000000           0.635925     <-            0.636027\n",
+       "3  10000000           6.267407     <-            6.338647"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "id": "ec7afc43-8398-4138-acb1-f3f44964a8a2",
    "metadata": {},
    "outputs": [
@@ -202,15 +202,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "from 0 or 1 0\n",
       "0: 1\n",
+      "from 0 or 1 1\n",
       "1: 1\n",
+      "from 0 or 1 1\n",
       "2: 2\n",
+      "from 0 or 1 1\n",
       "3: 6\n",
+      "from 0 or 1 1\n",
       "4: 24\n",
+      "from 0 or 1 1\n",
       "5: 120\n",
+      "from 0 or 1 1\n",
       "6: 720\n",
+      "from 0 or 1 1\n",
       "7: 5040\n",
+      "from 0 or 1 1\n",
       "8: 40320\n",
+      "from 0 or 1 1\n",
       "9: 362880\n"
      ]
     },
@@ -221,8 +231,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/fy/ltwxc73949qgdvs67w16wv9h0000gn/T/ipykernel_99368/830028521.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mn\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m9\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'{n}: {factorial(n)}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m \u001b[0mfactorial\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/var/folders/fy/ltwxc73949qgdvs67w16wv9h0000gn/T/ipykernel_99368/830028521.py\u001b[0m in \u001b[0;36mfactorial\u001b[0;34m(n)\u001b[0m\n\u001b[1;32m      6\u001b[0m         \u001b[0mcase\u001b[0m \u001b[0;36m0\u001b[0m \u001b[0;34m|\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m         \u001b[0mcase\u001b[0m \u001b[0mn\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0many\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn\u001b[0m \u001b[0;34m<=\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'n must be greater than one'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m         \u001b[0mcase\u001b[0m \u001b[0m_\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/var/folders/fy/ltwxc73949qgdvs67w16wv9h0000gn/T/ipykernel_99368/1237997973.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mn\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m9\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'{n}: {factorial(n)}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m \u001b[0mfactorial\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/var/folders/fy/ltwxc73949qgdvs67w16wv9h0000gn/T/ipykernel_99368/1237997973.py\u001b[0m in \u001b[0;36mfactorial\u001b[0;34m(n)\u001b[0m\n\u001b[1;32m      7\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'from 0 or 1 {m}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m         \u001b[0mcase\u001b[0m \u001b[0mn\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0many\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn\u001b[0m \u001b[0;34m<=\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'n must be greater than one'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m         \u001b[0mcase\u001b[0m \u001b[0m_\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mTypeError\u001b[0m: any() takes exactly one argument (2 given)"
      ]
     }
@@ -233,7 +243,8 @@
     "    match n:    \n",
     "        case n if n > 1:\n",
     "            return n * factorial(n-1)\n",
-    "        case 0 | 1:\n",
+    "        case 0 | 1 as m:\n",
+    "            print(f'from 0 or 1 {m}')\n",
     "            return 1\n",
     "        case n if any(n < 0, n <= -1):\n",
     "            raise ValueError('n must be greater than one')\n",
@@ -411,12 +422,14 @@
    "id": "88b7a0a6-aafe-4eb4-b61a-4936c78149e2",
    "metadata": {},
    "source": [
-    "### Python does a great job with tuple unpacking. Let's take it one step further."
+    "### Python does a great job with tuple unpacking. Let's take it one step further.\n",
+    "\n",
+    "see: https://www.python.org/dev/peps/pep-0642"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "id": "5d49ffd9-d6f0-445f-a84f-9a2846e18507",
    "metadata": {},
    "outputs": [
@@ -475,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "83c40569-75cb-47e3-9f64-30a9d9164232",
    "metadata": {},
    "outputs": [
@@ -495,6 +508,37 @@
    "source": [
     "color_unpacking((True, (255, 255, 255)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "eb9134ac-f36a-406f-bcb9-b033b19843f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "cannot unpack non-iterable int object",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/fy/ltwxc73949qgdvs67w16wv9h0000gn/T/ipykernel_99368/1939554530.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ml\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mz\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mz\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: cannot unpack non-iterable int object"
+     ]
+    }
+   ],
+   "source": [
+    "for (n, l, z) in (1,2,3):\n",
+    "    print(n,l,z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1ea4eef-d44b-4599-af43-0d8023a61251",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
