--- a/py310.ipynb
+++ b/py310.ipynb
@@ -243,8 +243,7 @@
     "    match n:    \n",
     "        case n if n > 1:\n",
     "            return n * factorial(n-1)\n",
-    "        case 0 | 1 as m:\n",
-    "            print(f'from 0 or 1 {m}')\n",
+    "        case 0 | 1:\n",
     "            return 1\n",
     "        case n if any(n < 0, n <= -1):\n",
     "            raise ValueError('n must be greater than one')\n",
@@ -424,7 +423,7 @@
    "source": [
     "### Python does a great job with tuple unpacking. Let's take it one step further.\n",
     "\n",
-    "see: https://www.python.org/dev/peps/pep-0642"
+    "see: [pep-642](https://www.python.org/dev/peps/pep-0642)"
    ]
   },
   {
@@ -508,37 +507,6 @@
    "source": [
     "color_unpacking((True, (255, 255, 255)))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "eb9134ac-f36a-406f-bcb9-b033b19843f2",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "cannot unpack non-iterable int object",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/fy/ltwxc73949qgdvs67w16wv9h0000gn/T/ipykernel_99368/1939554530.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ml\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mz\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mz\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: cannot unpack non-iterable int object"
-     ]
-    }
-   ],
-   "source": [
-    "for (n, l, z) in (1,2,3):\n",
-    "    print(n,l,z)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a1ea4eef-d44b-4599-af43-0d8023a61251",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
